--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
   "author": "Area2K",
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
     "build": "webpack --progress --colors --display-error-details --config webpack/build.config.js",
     "start": "webpack-dev-server --mode development --hot --open --config webpack/serve.config.js",
     "typecheck": "tsc",
-    "graphql": "./scripts/update-schema"
+    "graphql": "./scripts/update-schema",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "date-fns": "^2.12.0",
+    "date-fns-tz": "^1.0.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
     "regenerator-runtime": "^0.13.5",
     "styled-components": "^5.1.0"
   },
@@ -29,9 +37,12 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "@hot-loader/react-dom": "^16.13.0",
+    "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/styled-components": "^5.1.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.7",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.1.0",
