--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@apollo/client": "3.0.0-beta.44",
+    "@apollo/link-error": "^2.0.0-beta.3",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -28,9 +30,11 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.12.0",
     "date-fns-tz": "^1.0.10",
+    "graphql": "^14.5.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.5",
     "styled-components": "^5.1.0"
   },
@@ -47,6 +51,7 @@
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
