--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.12.0",
     "date-fns-tz": "^1.0.10",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
+    "react-clickout-handler": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
+    "react-popper": "^2.2.3",
+    "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.5",
     "styled-components": "^5.1.0"
   },
