--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "jsx": "react",
     "moduleResolution": "node",
     "noEmit": true,
+    "noImplicitAny": true,
     "paths": {
       "@/*": ["src/*"]
     },
