--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@apollo/client": "3.0.0-beta.44",
     "@apollo/link-error": "^2.0.0-beta.3",
+    "@area2k/use-localization": "0.0.2",
     "@area2k/use-modal": "^0.0.1",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
