--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns-tz": "^1.0.10",
     "graphql": "^14.5.8",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.1.2",
@@ -52,6 +53,7 @@
     "@hot-loader/react-dom": "^16.13.0",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
