--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "main": "src/index.tsx",
   "scripts": {
     "build": "webpack --progress --colors --display-error-details --config webpack/build.config.ts",
+    "build:debug": "webpack --progress --colors --display-error-details --config webpack/buildDebug.config.ts",
     "start": "webpack-dev-server --open --config webpack/serve.config.ts",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@stitches/react": "0.0.3.canary.3",
     "core-js": "~3.6.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "regenerator-runtime": "~0.13.7"
   },
   "devDependencies": {
@@ -39,7 +40,7 @@
     "source-map-loader": "^1.1.1",
     "terser-webpack-plugin": "^4.2.3",
     "ts-node": "^9.0.0",
-    "typescript": "~3.4.3",
+    "typescript": "^4.1.0-beta",
     "webpack": "~5.0.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
