--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "isolatedModules": true,
-    "jsx": "react",
+    "jsx": "react-jsxdev",
     "moduleResolution": "node",
     "noEmit": true,
     "noImplicitAny": true,
