--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "@stitches/react": "0.0.3.canary.3",
     "core-js": "~3.6.5",
+    "graphql": "^15.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "regenerator-runtime": "~0.13.7"
@@ -28,6 +30,7 @@
     "@babel/preset-react": "~7.10.4",
     "@babel/preset-typescript": "~7.10.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
+    "@types/dotenv-webpack": "^5.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
     "@types/terser-webpack-plugin": "^4.2.0",
@@ -35,6 +38,8 @@
     "babel-loader": "~8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "dotenv-webpack": "^5.0.0",
+    "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "~4.5.0",
     "react-refresh": "~0.8.3",
     "source-map-loader": "^1.1.1",
