--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@stitches/react": "0.0.3.canary.3",
     "core-js": "~3.6.5",
     "graphql": "^15.4.0",
+    "history": "5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-dom": "^6.0.0-beta.0",
     "regenerator-runtime": "~0.13.7"
   },
   "devDependencies": {
