--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@area2k/use-form": "^0.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "5.15.1",
+    "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@stitches/react": "0.0.3-canary.4",
     "core-js": "~3.6.5",
     "graphql": "^15.4.0",
     "history": "5",
+    "query-string": "^6.13.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "^6.0.0-beta.0",
