--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "core-js": "~3.6.5",
     "graphql": "^15.4.0",
     "history": "5",
+    "imask": "^6.0.5",
     "query-string": "^6.13.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-imask": "^6.0.5",
     "react-router-dom": "^6.0.0-beta.0",
     "regenerator-runtime": "~0.13.7"
   },
