add graphql endpoint to deploy yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ jobs:
       run: npm install
     - name: Build page
       run: npm run build
+      env:
+        GRAPHQL_ENDPOINT: https://api.github.com/graphql
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
