--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "source-map-loader": "^1.1.1",
     "terser-webpack-plugin": "^4.2.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.0-beta",
+    "typescript": "^4.1.1-rc",
     "webpack": "~5.0.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
