--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@fortawesome/free-regular-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
-    "@stitches/react": "0.0.3-canary.4",
+    "@stitches/react": "0.1.0-canary.3",
     "core-js": "~3.6.5",
     "graphql": "^15.4.0",
     "history": "5",
@@ -51,15 +51,15 @@
     "clean-webpack-plugin": "^3.0.0",
     "dotenv-webpack": "^5.0.0",
     "git-revision-webpack-plugin": "^3.0.6",
-    "html-webpack-plugin": "~4.5.0",
+    "html-webpack-plugin": "^5.1.0",
     "react-refresh": "~0.8.3",
     "source-map-loader": "^1.1.1",
     "terser-webpack-plugin": "^4.2.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.1-rc",
-    "webpack": "~5.0.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "typescript": "4.1.3",
+    "webpack": "5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "4.0.0-beta.0",
     "webpack-merge": "^5.1.4"
   },
   "engines": {
