--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@area2k/use-form": "0.0.2",
     "@area2k/use-modal": "^0.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
-    "@stitches/react": "0.1.0-canary.3",
+    "@stitches/react": "0.1.0-canary.11",
     "core-js": "~3.6.5",
     "graphql": "^15.4.0",
     "history": "5",
@@ -40,6 +41,7 @@
     "@babel/preset-env": "~7.11.5",
     "@babel/preset-react": "~7.10.4",
     "@babel/preset-typescript": "~7.10.4",
+    "@cerner/duplicate-package-checker-webpack-plugin": "^2.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "@types/dotenv-webpack": "^5.0.0",
     "@types/react": "^16.9.52",
