--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "webpack --progress --node-env production --stats verbose --config webpack/build.config.ts",
     "build:debug": "webpack --progress --stats verbose --config webpack/buildDebug.config.ts",
     "start": "webpack-dev-server --open --config webpack/serve.config.ts",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "storybook": "STORYBOOK=1 start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
@@ -43,6 +45,11 @@
     "@babel/preset-typescript": "~7.10.4",
     "@cerner/duplicate-package-checker-webpack-plugin": "^2.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
+    "@storybook/addon-actions": "^6.2.0-beta.3",
+    "@storybook/addon-essentials": "^6.2.0-beta.3",
+    "@storybook/addon-links": "^6.2.0-beta.3",
+    "@storybook/builder-webpack5": "^6.2.0-beta.3",
+    "@storybook/react": "^6.2.0-beta.3",
     "@types/dotenv-webpack": "^5.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
@@ -54,6 +61,7 @@
     "dotenv-webpack": "^5.0.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^5.1.0",
+    "react-docgen-typescript": "^1.21.0",
     "react-refresh": "~0.8.3",
     "source-map-loader": "^1.1.1",
     "terser-webpack-plugin": "^4.2.3",
