add list action type

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "isolatedModules": true,
+    "lib": ["DOM", "ES2019.Array"],
     "jsx": "react-jsxdev",
     "moduleResolution": "node",
     "noEmit": true,
