--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "17.0.1",
     "react-imask": "^6.0.5",
     "react-router-dom": "^6.0.0-beta.0",
+    "react-slider": "^1.1.4",
     "regenerator-runtime": "~0.13.7"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/dotenv-webpack": "^5.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "@types/react-slider": "^1.1.1",
     "@types/terser-webpack-plugin": "^4.2.0",
     "@types/webpack-dev-server": "^2.9.4",
     "babel-loader": "~8.1.0",
